manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-app
spec:
  type: ClusterIP
  selector:
    app: backend-app
  ports:
    - port: 5000          
      targetPort: 5000     
     # nodePort: 32000
