manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
spec:
  type: LoadBalancer
  selector:
    app: frontend-app
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
    nodePort: 31000
